--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,8 +37,8 @@ jobs:
           curseforge-token: ${{ secrets.CURSEFORGE_TOKEN }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           files: build/libs/!(*-@(dev|sources)).jar
-          name: 0.3.6 for MC 1.17 to MC 1.20.6
-          version: 0.3.6+1.17-1.20.5
+          name: 0.4.0 for MC 1.17+
+          version: 0.4.0+1.17-1.21
           version-type: release
           loaders: |
             fabric
@@ -60,6 +60,7 @@ jobs:
             1.20.4
             1.20.5
             1.20.6
+            1.21
           dependencies: |
             cloth-config  | depends
             modmenu       | recommends
