--- a/gradle.properties
+++ b/gradle.properties
@@ -18,6 +18,11 @@ fabric_loader_version = 0.15.11
 fabric_asm_version = v2.3
 
 # Module Dependencies
+# 1.16
+minecraft_version_1_16 = 1.16.5
+yarn_mappings_1_16 = 1.16.5+build.10
+cloth_config_version_1_16 = 4.15.82
+modmenu_version_1_16 = 1.16.23
 # 1.17
 minecraft_version_1_17 = 1.17.1
 yarn_mappings_1_17 = 1.17.1+build.65
@@ -42,15 +47,25 @@ modmenu_version_1_20 = 7.2.2
 minecraft_version_1_20_5 = 1.20.6
 yarn_mappings_1_20_5 = 1.20.6+build.3
 cloth_config_version_1_20_5 = 14.0.126
-modmenu_version_1_20_5 = 10.0.0-beta.1
+modmenu_version_1_20_5 = 10.0.0
 # 1.21
 minecraft_version_1_21 = 1.21
 yarn_mappings_1_21 = 1.21+build.2
 cloth_config_version_1_21 = 15.0.127
-modmenu_version_1_21 = 11.0.0-rc.4
+modmenu_version_1_21 = 11.0.0
 
 # Dev-Env Mods
 use_third_party_mods = true
+# 1.16
+fabric_api_version_1_16 = 0.42.0+1.16
+lazydfu_version_1_16 = 0.1.2
+sodium_version_1_16 = mc1.16.5-0.2.0
+lithium_version_1_16 = mc1.16.5-0.6.6
+phosphor_version_1_16 = mc1.16.2-0.8.0
+ferritecore_version_1_16 = 2.1.1-fabric
+smoothboot_version_1_16 = 1.16.5-1.6.0
+no_fade_version_1_16 = 3228523
+raised_version_1_16 = Fabric-1.16.5-3.1.3
 # 1.17
 fabric_api_version_1_17 = 0.46.1+1.17
 lazydfu_version_1_17 = 0.1.2
@@ -97,7 +112,7 @@ double_hotbar_version_1_20 = 1.3.1-mc1.20.1-fabric
 # 1.20.5
 fabric_api_version_1_20_5 = 0.100.2+1.20.6
 sodium_version_1_20_5 = mc1.20.6-0.5.9
-lithium_version_1_20_5 = mc1.20.6-0.12.4
+lithium_version_1_20_5 = mc1.20.6-0.12.5
 ferritecore_version_1_20_5 = 6.1.1-fabric
 threadtweak_version_1_20_5 = 0.1.3+mc1.20.6
 fadeless_version_1_20_5 = 1.0.1
@@ -106,7 +121,7 @@ raised_version_1_20_5 = Fabric-24w10a-3.1.3
 # 1.21
 fabric_api_version_1_21 = 0.100.2+1.21
 sodium_version_1_21 = mc1.21-0.5.9
-lithium_version_1_21 = mc1.21-0.12.5
+lithium_version_1_21 = mc1.21-0.12.7
 ferritecore_version_1_21 = 7.0.0-fabric
 # threadtweak_version_1_21 =
 fadeless_version_1_21 = 1.0.1
