--- a/microdurability-core/build.gradle
+++ b/microdurability-core/build.gradle
@@ -3,24 +3,24 @@ base {
 }
 
 dependencies {
-	minecraft "com.mojang:minecraft:${project.minecraft_version_1_17}"
+	minecraft "com.mojang:minecraft:${project.minecraft_version_1_16}"
 	mappings loom.layered {
-		it.mappings "net.fabricmc:yarn:${project.yarn_mappings_1_17}:v2"
-		it.mappings rootProject.file('mapping-overrides/1.17.tiny')
+		it.mappings "net.fabricmc:yarn:${project.yarn_mappings_1_16}:v2"
+		it.mappings rootProject.file('mapping-overrides/getHandItems.tiny')
 	}
 
 	// Other mods
-	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_17}"
-	modCompileOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_17}") {
+	modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version_1_16}"
+	modCompileOnly("me.shedaniel.cloth:cloth-config-fabric:${project.cloth_config_version_1_16}") {
 		exclude(group: "net.fabricmc.fabric-api")
 	}
 }
 
 java {
-	sourceCompatibility = JavaVersion.VERSION_16
-	targetCompatibility = JavaVersion.VERSION_16
+	sourceCompatibility = JavaVersion.VERSION_1_8
+	targetCompatibility = JavaVersion.VERSION_1_8
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 16
+	it.options.release = 8
 }
