--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,15 +23,14 @@ jobs:
         uses: gradle/wrapper-validation-action@v3
 
       - name: Build
-        run: ./gradlew :build --stacktrace
+        run: ./gradlew build --stacktrace
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: build-artifacts
           path: |
-            **/build/libs
-            !microdurability-core/
+            build/libs
       - name: Cleanup Gradle Cache
         run: |
           rm -f ~/.gradle/caches/modules-2/modules-2.lock
